--- a/pages/three.html
+++ b/pages/three.html
@@ -1,11 +1,119 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../Style/style.css">
+    <title>Лабораторная работа № 3</title>
 </head>
 <body>
+    <div class="p_wrap">
+        <p>Лабораторная работа № 3</p>
+    </div>
+    <div class="lr">
+        <div class="task1">
+            <h3 class="task_text_number">Задание 1</h3>
+            <div class="task_input">
+              <div>
+                <label class="label_text_main">Введите a: </label>
+                <input type="text" id="a" class="task_input_text_number">
+              </div>
+              <label class="label_text_desc">a должно быть числом</label>
+              <div>
+                <label class="label_text_main">Введите b: </label>
+                <input type="text" id="b" class="task_input_text_number">
+              </div>
+              <label class="label_text_desc">b должно быть числом</label>
+              <div>
+                <label class="label_text_main">Введите c: </label>
+                <input type="text" id="c" class="task_input_text_number">
+              </div>
+              <label class="label_text_desc">c должно быть числом</label>
+            </div>
+            <div id="calc1">
+                <button class="btn_get_answer" onclick="calculateMatchingPair()">Получить ответ</button>
+                <div id="result1" class="task_text_answer">Ответ: Не подсчитан</div>
+            </div>
+        </div>
+        
+        <div class="task2">
+            <h3 class="task_text_number">Задание 2</h3>
+            <div class="task_input">
+                <div>
+                  <label class="label_text_main">Введите a: </label>
+                  <input type="text" id="a2" class="task_input_text_number">
+                </div>
+                <label class="label_text_desc">a должно быть числом</label>
+                <div>
+                  <label class="label_text_main">Введите b: </label>
+                  <input type="text" id="b2" class="task_input_text_number">
+                </div>
+                <label class="label_text_desc">b должно быть числом</label>
+                <div>
+                  <label class="label_text_main">Введите c: </label>
+                  <input type="text" id="c2" class="task_input_text_number">
+                </div>
+                <label class="label_text_desc">c должно быть числом</label>
+            </div>
+            <div id="calc2">
+                <button class="btn_get_answer" onclick="calculateUniqueNumber()">Получить ответ</button>
+                <div id="result2" class="task_text_answer">Ответ: Не подсчитан</div>
+            </div>
+        </div>
+
+        <div class="task1">
+            <h3 class="task_text_number">Задание 3</h3>
+            <div class="task_input">
+              <div>
+                <label class="label_text_main">Введите x: </label>
+                <input type="text" id="x3" class="task_input_text_number" value="-4.51">
+              </div>
+              <label class="label_text_desc">x должно быть числом</label>
+              <div>
+                <label class="label_text_main">Введите a: </label>
+                <input type="text" id="a3" class="task_input_text_number" value="4.8">
+              </div>
+              <label class="label_text_desc">a должно быть числом</label>
+              <div>
+                <label class="label_text_main">Введите b: </label>
+                <input type="text" id="b3" class="task_input_text_number" value="0.64">
+              </div>
+              <label class="label_text_desc">b должно быть числом</label>
+            </div>
+            <div id="calc1">
+                <button class="btn_get_answer" onclick="calculateYOne()">Получить ответ</button>
+                <div id="result3" class="task_text_answer">Ответ: Не подсчитан</div>
+            </div>
+        </div>
     
+        <div class="task2">
+            <h3 class="task_text_number">Задание 4</h3>
+            <div class="task_input">
+              <div>
+                <label class="label_text_main">Введите x: </label>
+                <input type="text" id="x4" class="task_input_text_number">
+              </div>
+              <label class="label_text_desc">x должно быть числом</label>
+              <div>
+                <label class="label_text_main">Введите b: </label>
+                <input type="text" id="b4" class="task_input_text_number" value="4.8">
+              </div>
+              <label class="label_text_desc">b должно быть числом</label>
+              <div>
+                <label class="label_text_main">Введите c: </label>
+                <input type="text" id="c4" class="task_input_text_number" value="0.64">
+              </div>
+              <label class="label_text_desc">c должно быть числом</label>
+            </div>
+            <div id="calc1">
+                <button class="btn_get_answer" onclick="calculateYTwo()">Получить ответ</button>
+                <div id="result4" class="task_text_answer">Ответ: Не подсчитан</div>
+            </div>
+        </div>
+    </div>
+
+    <script src="../scripts/script3_1.js"></script>
+    <script src="../scripts/script3_2.js"></script>
+    <script src="../scripts/script3_3.js"></script>
+    <script src="../scripts/script3_4.js"></script>
 </body>
 </html>
