--- a/pages/three.html
+++ b/pages/three.html
@@ -54,7 +54,7 @@
                 </div>
                 <label class="label_text_desc">c должно быть числом</label>
             </div>
-            <div id="calc2">
+            <div id="calc">
                 <button class="btn_get_answer" onclick="calculateUniqueNumber()">Получить ответ</button>
                 <div id="result2" class="task_text_answer">Ответ: Не подсчитан</div>
             </div>
@@ -65,21 +65,21 @@
             <div class="task_input">
               <div>
                 <label class="label_text_main">Введите x: </label>
-                <input type="text" id="x3" class="task_input_text_number" value="-4.51">
+                <input type="text" id="x3" class="task_input_text_number">
               </div>
               <label class="label_text_desc">x должно быть числом</label>
               <div>
                 <label class="label_text_main">Введите a: </label>
-                <input type="text" id="a3" class="task_input_text_number" value="4.8">
+                <input type="text" id="a3" class="task_input_text_number">
               </div>
               <label class="label_text_desc">a должно быть числом</label>
               <div>
                 <label class="label_text_main">Введите b: </label>
-                <input type="text" id="b3" class="task_input_text_number" value="0.64">
+                <input type="text" id="b3" class="task_input_text_number">
               </div>
               <label class="label_text_desc">b должно быть числом</label>
             </div>
-            <div id="calc1">
+            <div id="calc2">
                 <button class="btn_get_answer" onclick="calculateYOne()">Получить ответ</button>
                 <div id="result3" class="task_text_answer">Ответ: Не подсчитан</div>
             </div>
@@ -95,16 +95,16 @@
               <label class="label_text_desc">x должно быть числом</label>
               <div>
                 <label class="label_text_main">Введите b: </label>
-                <input type="text" id="b4" class="task_input_text_number" value="4.8">
+                <input type="text" id="b4" class="task_input_text_number">
               </div>
               <label class="label_text_desc">b должно быть числом</label>
               <div>
                 <label class="label_text_main">Введите c: </label>
-                <input type="text" id="c4" class="task_input_text_number" value="0.64">
+                <input type="text" id="c4" class="task_input_text_number">
               </div>
               <label class="label_text_desc">c должно быть числом</label>
             </div>
-            <div id="calc1">
+            <div id="calc3">
                 <button class="btn_get_answer" onclick="calculateYTwo()">Получить ответ</button>
                 <div id="result4" class="task_text_answer">Ответ: Не подсчитан</div>
             </div>
