--- a/pages/six.html
+++ b/pages/six.html
@@ -14,17 +14,19 @@
             <h3 class="task_text_number">Задание 1</h3>
             <div class="task_input">
               <div>
-                <label class="label_text_main">Введите N: </label>
+                <label class="label_text_main">Введите матрицу: </label>
               </div>
-              <label class="label_text_desc">N должно быть целым  числом  N (>  1)</label>
               <div>
                 <label class="label_text_main">Введите набор целых чисел: </label>
-                <input type="text" id="numbers" class="task_input_text_number" value="1 2 3 4 5">
+                <textarea id="matrix" rows="5" cols="30" placeholder="Пример ввода:
+1 2 3 4
+5 6 7 8
+9 10 11 12"></textarea>
               </div>
               <label class="label_text_desc">набор должен состоять только из целых чисел, писать через пробел</label>
             </div>
             <div id="calc1">
-                <button class="btn_get_answer" onclick="calculateSmallerThanLeft()">Получить ответ</button>
+                <button class="btn_get_answer" onclick="calculateMatrixColumnSums()">Получить ответ</button>
                 <div id="result1" class="task_text_answer">Ответ: Не подсчитан</div>
             </div>
         </div>
@@ -32,16 +34,14 @@
         <div class="task2">
             <h3 class="task_text_number">Задание 2</h3>
             <div class="task_input">
-              <label class="label_text_main">Введите A:</label>
-              <input type="text" id="a" class="task_input_text_number">
+              <label class="label_text_main">Введите квадратную матрицу:</label>
+              <textarea id="matrix2" rows="5" cols="30" placeholder="Пример ввода:
+1 2 3
+4 5 6
+7 8 9"></textarea><br>
             </div>
-            <label class="label_text_desc">A должно быть вещественное</label>
-            <div class="task_input">
-                <label class="label_text_main">Введите N:</label>
-            </div>
-            <label class="label_text_desc">N должно быть целым  числом</label>
             <div id="calc2">
-                <button class="btn_get_answer" onclick="calculatePolynomial()">Получить ответ</button>
+                <button class="btn_get_answer" onclick="calculateMatrixZeroed()">Получить ответ</button>
                 <div id="result2" class="task_text_answer">Ответ: Не подсчитан</div>
             </div>
         </div>
